# back-service-admin

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: architect.md  code-reviewer.md  detective.md  discovery.md  scout.md  scribe.md
procman/: __init__.py  __main__.py  autostart.py  cli.py  config.py  daemonize.py  database.py  manager.py
tests/: test_autostart_modes.py
